[package]
name = 'agung-runtime'
version = '3.0.0-polkadot-v0.9.19'
description = 'A node of the peaq network.'
authors = ['peaq network <https://github.com/peaqnetwork>']
homepage = 'https://peaq.network/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/peaqnetwork/peaq-network-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.smallvec]
version = '1.6.1'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.serde]
default-features = false
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.rlp]
default-features = false
optional = true
version = '0.5'

[dependencies.sha3]
default-features = false
optional = true
version = '0.8'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
optional = true
branch = 'peaq-polkadot-v0.9.19'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
optional = true
branch = 'peaq-polkadot-v0.9.19'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'


[dependencies.sp-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.peaq-pallet-did]
default-features = false
git = 'https://github.com/peaqnetwork/peaq-pallet-did.git'
branch = 'dev'
# version = '0.0.1'

[dependencies.peaq-pallet-transaction]
default-features = false
git = 'https://github.com/peaqnetwork/peaq-pallet-transaction.git'
branch = 'dev'
# version = '0.0.1'


[dependencies.pallet-multisig]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'


# ### Ethereum
[dependencies.sp-io]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.fp-evm]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.fp-self-contained]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-base-fee]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-evm-precompile-blake2]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-evm-precompile-bn128]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-evm-precompile-dispatch]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.19'


# Tracing
[dependencies.evm-tracing-events]
path = "../../primitives/rpc/evm-tracing-events"
optional = true
default-features = false

[dependencies.peaq-evm-tracer]
path = "../evm_tracer"
optional = true
default-features = false

[dependencies.peaq-rpc-primitives-debug]
path = "../../primitives/rpc/debug"
default-features = false

[dependencies.peaq-rpc-primitives-txpool]
path = "../../primitives/rpc/txpool"
default-features = false


# Parachain
[dependencies.cumulus-primitives-core]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.19"
default-features = false

[dependencies.cumulus-primitives-utility]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.19"
default-features = false

[dependencies.cumulus-primitives-timestamp]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.19"
default-features = false

[dependencies.cumulus-pallet-parachain-system]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.19"
default-features = false

[dependencies.cumulus-pallet-aura-ext]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.19"
default-features = false

[dependencies.parachain-info]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.19"
default-features = false

[dependencies.pallet-collator-selection]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.19"
default-features = false

# polkadot dependencies
[dependencies.polkadot-parachain]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.19"

[dependencies.polkadot-primitives]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.19"

[dependencies.polkadot-runtime-common]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.19"

# [dependencies.xcm]
# git = "https://github.com/peaqnetwork/polkadot"
# default-features = false
# branch = "peaq-polkadot-v0.9.19"
#
# [dependencies.xcm-builder]
# git = "https://github.com/peaqnetwork/polkadot"
# default-features = false
# branch = "peaq-polkadot-v0.9.19"
#
# [dependencies.xcm-executor]
# git = "https://github.com/peaqnetwork/polkadot"
# default-features = false
# branch = "peaq-polkadot-v0.9.19"
#

# Parachain continue
[dependencies.pallet-session]
git = "https://github.com/peaqnetwork/substrate"
branch = "peaq-polkadot-v0.9.19"
default-features = false

[dependencies.pallet-authorship]
git = "https://github.com/peaqnetwork/substrate"
branch = "peaq-polkadot-v0.9.19"
default-features = false


[features]
default = ["std", "aura"]
aura = []
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'hex-literal',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
	'pallet-contracts/runtime-benchmarks',
]
std = [
	'codec/std',
	"serde",

	'scale-info/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'pallet-aura/std',
	'pallet-balances/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-multisig/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'pallet-contracts/std',
	'pallet-contracts-primitives/std',
	'pallet-contracts-rpc-runtime-api/std',
	'peaq-pallet-did/std',
	'peaq-pallet-transaction/std',

	# ETH support
	'sp-io/std',
	'fp-evm/std',
	'fp-self-contained/std',
	'pallet-base-fee/std',
	'pallet-dynamic-fee/std',
	'pallet-ethereum/std',
	'pallet-evm/std',
	'pallet-evm-precompile-simple/std',
	'pallet-evm-precompile-modexp/std',
	'pallet-evm-precompile-sha3fips/std',
	'sp-std/std',
	'fp-rpc/std',

	# Tracing
	'evm-tracing-events/std',
	'peaq-evm-tracer/std',
	'peaq-rpc-primitives-debug/std',
	'peaq-rpc-primitives-txpool/std',

	# Parachain
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-aura-ext/std",
    "pallet-collator-selection/std",
	"parachain-info/std",

    "polkadot-parachain/std",
    "polkadot-primitives/std",
    "polkadot-runtime-common/std",
    # "xcm/std",
    # "xcm-builder/std",
    # "xcm-executor/std",

    "pallet-session/std",
    "pallet-authorship/std",
]

# Must be enabled for tracing runtimes only
evm-tracing = [
	'evm-tracing-events',
	'peaq-evm-tracer',
	'rlp',
	'sha3'
]
