[package]
name = 'peaq-agung-runtime'
version = '3.0.0-polkadot-v0.9.29'
description = 'A node of the peaq network.'
authors = ['peaq network <https://github.com/peaqnetwork>']
homepage = 'https://peaq.network/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/peaqnetwork/peaq-network-node/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.smallvec]
version = '1.6.1'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.serde]
default-features = false
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.rlp]
default-features = false
optional = true
version = '0.5'

[dependencies.sha3]
default-features = false
optional = true
version = '0.8'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
optional = true
branch = 'peaq-polkadot-v0.9.29'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
optional = true
branch = 'peaq-polkadot-v0.9.29'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.0.1'


[dependencies.sp-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-contracts-primitives]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-contracts-rpc-runtime-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.peaq-pallet-did]
default-features = false
git = 'https://github.com/peaqnetwork/peaq-pallet-did.git'
branch = 'peaq-polkadot-v0.9.29'
version = '0.0.2'

[dependencies.peaq-pallet-did-runtime-api]
default-features = false
git = 'https://github.com/peaqnetwork/peaq-pallet-did.git'
branch = 'peaq-polkadot-v0.9.29'
version = '0.0.2'

[dependencies.peaq-pallet-transaction]
default-features = false
git = 'https://github.com/peaqnetwork/peaq-pallet-transaction.git'
branch = 'peaq-polkadot-v0.9.29'
version = '0.0.2'

[dependencies.peaq-pallet-rbac]
path = '../../../peaq-pallet-rbac/pallet'
# git = 'https://github.com/peaqnetwork/peaq-pallet-rbac.git'
default-features = false
# branch = 'peaq-polkadot-v0.9.29'
# version = '0.0.2'

[dependencies.peaq-pallet-rbac-runtime-api]
path = '../../../peaq-pallet-rbac/rpc/runtime-api'
# git = 'https://github.com/peaqnetwork/peaq-pallet-rbac.git'
default-features = false
# branch = 'peaq-polkadot-v0.9.29'
# version = '0.0.2'

[dependencies.pallet-multisig]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'


[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'



# ### Ethereum
[dependencies.sp-io]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.fp-evm]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.fp-self-contained]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-base-fee]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-evm-precompile-blake2]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-evm-precompile-bn128]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-evm-precompile-dispatch]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/peaqnetwork/frontier'
branch = 'peaq-polkadot-v0.9.29'


# Tracing
[dependencies.evm-tracing-events]
path = "../../primitives/rpc/evm-tracing-events"
optional = true
default-features = false

[dependencies.peaq-evm-tracer]
path = "../evm_tracer"
optional = true
default-features = false

[dependencies.peaq-rpc-primitives-debug]
path = "../../primitives/rpc/debug"
default-features = false

[dependencies.peaq-rpc-primitives-txpool]
path = "../../primitives/rpc/txpool"
default-features = false


# Parachain
[dependencies.cumulus-primitives-core]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.29"
default-features = false

[dependencies.cumulus-primitives-utility]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.29"
default-features = false

[dependencies.cumulus-primitives-timestamp]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.29"
default-features = false

[dependencies.cumulus-pallet-parachain-system]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.29"
default-features = false

[dependencies.cumulus-pallet-aura-ext]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.29"
default-features = false

[dependencies.parachain-info]
git = "https://github.com/peaqnetwork/cumulus"
branch = "peaq-polkadot-v0.9.29"
default-features = false

# polkadot dependencies
[dependencies.polkadot-parachain]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.polkadot-primitives]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.polkadot-runtime-common]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.29"

# Parachain continue
[dependencies.pallet-session]
git = "https://github.com/peaqnetwork/substrate"
branch = "peaq-polkadot-v0.9.29"
default-features = false

[dependencies.pallet-authorship]
git = "https://github.com/peaqnetwork/substrate"
branch = "peaq-polkadot-v0.9.29"
default-features = false

[dependencies.parachain-staking]
path = "../../pallets/parachain-staking"
default-features = false

[dependencies.pallet-block-reward]
path = "../../pallets/block-reward"
default-features = false


# XCM
[dependencies.xcm]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.xcm-builder]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.xcm-executor]
git = "https://github.com/peaqnetwork/polkadot"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.pallet-xcm]
git = "https://github.com/peaqnetwork/polkadot"
branch = "peaq-polkadot-v0.9.29"
default-features = false

[dependencies.cumulus-pallet-xcm]
git = "https://github.com/peaqnetwork/cumulus"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.cumulus-pallet-xcmp-queue]
git = "https://github.com/peaqnetwork/cumulus"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.cumulus-pallet-dmp-queue]
git = "https://github.com/peaqnetwork/cumulus"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.orml-currencies]
git = "https://github.com/peaqnetwork/open-runtime-module-library"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.orml-tokens]
git = "https://github.com/peaqnetwork/open-runtime-module-library"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.orml-traits]
git = "https://github.com/peaqnetwork/open-runtime-module-library"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.orml-xtokens]
git = "https://github.com/peaqnetwork/open-runtime-module-library"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.orml-unknown-tokens]
git = "https://github.com/peaqnetwork/open-runtime-module-library"
default-features = false
branch = "peaq-polkadot-v0.9.29"

[dependencies.orml-xcm-support]
git = "https://github.com/peaqnetwork/open-runtime-module-library"
default-features = false
branch = "peaq-polkadot-v0.9.29"

# Benchmark
[dependencies.pallet-collective]
git = "https://github.com/peaqnetwork/substrate"
branch = "peaq-polkadot-v0.9.29"
default-features = false

# Customized
[dependencies.peaq-primitives-xcm]
path = "../../primitives/xcm"
default-features = false

[dependencies.precompile-utils]
path = "../../precompiles/utils"
default-features = false


[features]
default = ["std", "aura"]
aura = []
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'hex-literal',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'sp-runtime/runtime-benchmarks',
	'pallet-contracts/runtime-benchmarks',
	'parachain-staking/runtime-benchmarks',
	'pallet-block-reward/runtime-benchmarks',

	'pallet-ethereum/runtime-benchmarks',
	'pallet-collective/runtime-benchmarks',
	'pallet-xcm/runtime-benchmarks',
	'xcm-builder/runtime-benchmarks',
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",

	'peaq-pallet-transaction/runtime-benchmarks',
	'peaq-pallet-did/runtime-benchmarks',
	'peaq-pallet-rbac/runtime-benchmarks',
]

std = [
	'codec/std',
	"serde",

	'scale-info/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'pallet-aura/std',
	'pallet-balances/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-transaction-payment/std',
	'pallet-multisig/std',
	'pallet-utility/std',
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'pallet-contracts/std',
	'pallet-contracts-primitives/std',
	'pallet-contracts-rpc-runtime-api/std',
	'peaq-pallet-did/std',
	'peaq-pallet-did-runtime-api/std',
	'peaq-pallet-transaction/std',
	'peaq-pallet-rbac/std',
	'peaq-pallet-rbac-runtime-api/std',

	# ETH support
	'sp-io/std',
	'fp-evm/std',
	'fp-self-contained/std',
	'pallet-base-fee/std',
	'pallet-dynamic-fee/std',
	'pallet-ethereum/std',
	'pallet-evm/std',
	'pallet-evm-precompile-simple/std',
	'pallet-evm-precompile-modexp/std',
	'pallet-evm-precompile-sha3fips/std',
	'sp-std/std',
	'fp-rpc/std',

	# Tracing
	'evm-tracing-events/std',
	'peaq-evm-tracer/std',
	'peaq-rpc-primitives-debug/std',
	'peaq-rpc-primitives-txpool/std',

	# Parachain
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-aura-ext/std",
	"parachain-info/std",

    "polkadot-parachain/std",
    "polkadot-primitives/std",
    "polkadot-runtime-common/std",

	# Customized Parachain
    "pallet-session/std",
    "pallet-authorship/std",

    "parachain-staking/std",
    "pallet-block-reward/std",

	# XCM
    "xcm/std",
    "xcm-builder/std",
    "xcm-executor/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"orml-xtokens/std",

	# Customized
	"peaq-primitives-xcm/std",
	"precompile-utils/std",
]

# Must be enabled for tracing runtimes only
evm-tracing = [
	'evm-tracing-events',
	'peaq-evm-tracer',
	'rlp',
	'sha3'
]
