[package]
name = "runtime-common"
version = "3.0.0-polkadot-v0.9.43"
description = "A node of the peaq network."
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
orml-tokens = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-block-reward = { workspace = true, default-features = false }
peaq-primitives-xcm = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }
zenlink-protocol = { workspace = true, default-features = false }


[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"cumulus-primitives-core/std",
	"cumulus-pallet-parachain-system/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-transaction-payment/std",
	"pallet-block-reward/std",
	"peaq-primitives-xcm/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm/std",
	"zenlink-protocol/std",
]
