[package]
name = "runtime-common"
version = "3.1.0-polkadot-v1.1.0"
description = "A node of the peaq network."
authors = ["peaq network <https://github.com/peaqnetwork>"]
homepage = "https://peaq.network/"
edition = "2021"
publish = false


[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
pallet-block-reward = { path = "../../pallets/block-reward", default-features = false }
peaq-primitives-xcm = { path = "../../primitives/xcm", default-features = false }
scale-info = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }
zenlink-protocol = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }
xc-asset-config = { path = "../../pallets/xc-asset-config", default-features = false }


[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"cumulus-primitives-core/std",
	"cumulus-pallet-parachain-system/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-traits/std",
	"pallet-transaction-payment/std",
	"pallet-assets/std",
	"pallet-block-reward/std",
	"peaq-primitives-xcm/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm/std",
    "xcm-executor/std",
	"xcm-builder/std",
	"zenlink-protocol/std",
	"xc-asset-config/std",
]
