[package]
name = "peaq-evm-tracer"
license = "GPL-3.0-only"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
fp-evm = { workspace = true, default-features = false }
ethereum-types = { workspace = true, default-features = false }
evm = { workspace = true, default-features = false, features = [ "with-codec" ] }
evm-gasometer = { workspace = true, default-features = false }
evm-runtime = { workspace = true, default-features = false }
evm-tracing-events = { workspace = true, default-features = false, features = [ "evm-tracing" ] }
pallet-evm = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false }
peaq-primitives-ext = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"ethereum-types/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm-tracing-events/std",
	"evm/std",
	"evm/with-serde",
	"fp-evm/std",
	"peaq-primitives-ext/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
