[package]
name = "peaq-evm-tracer"
authors = ["peaq network <https://github.com/peaqnetwork>"]
edition = "2021"
homepage = "https://peaq.network/"
license = "GPL-3.0-only"
repository = "https://github.com/peaqnetwork/peaq-network-node/"
version = "0.1.0"

[dependencies]

evm-tracing-events = { path = "../../primitives/rpc/evm-tracing-events", default-features = false, features = [ "evm-tracing" ] }
peaq-primitives-ext = { path = "../../primitives/ext", default-features = false }

# Substrate
parity-scale-codec = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Frontier
ethereum-types = { workspace = true, default-features = false }
evm = { workspace = true, default-features = false, features = [ "with-codec" ] }
evm-gasometer = { workspace = true, default-features = false }
evm-runtime = { workspace = true, default-features = false }
fp-evm = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"ethereum-types/std",
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm-tracing-events/std",
	"evm/std",
	"evm/with-serde",
	"fp-evm/std",
	"peaq-primitives-ext/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
